src/test/deca/context/valid/ContextSansObjet/OperationsBooleennes/IntEqFloat.deca
//Description
// test de comparaison entre en int et un float
//
//Réponse
// ok
{
    1 == 1.0;
}